--- a/articles/logic-apps/toc.yml
+++ b/articles/logic-apps/toc.yml
@@ -67,8 +67,14 @@
           href: logic-apps-move-from-mabs.md
         - name: Power Automate からフローをエクスポートして Azure Logic Apps にデプロイする
           href: export-from-microsoft-flow-logic-app-template.md
-        - name: Visual Studio Code でステートフルまたはステートレスなワークフローを作成する
-          href: create-stateful-stateless-workflows-visual-studio-code.md
+        - name: Azure Logic Apps プレビュー
+          items:
+            - name: Azure Logic Apps プレビューの概要
+              href: logic-apps-overview-preview.md
+            - name: ステートフルとステートレス ワークフローの作成 - Azure portal
+              href: create-stateful-stateless-workflows-azure-portal.md
+            - name: ステートフルとステートレス ワークフローの作成 - Visual Studio Code
+              href: create-stateful-stateless-workflows-visual-studio-code.md
         - name: Power Automate と Power Apps からロジック アプリを呼び出す
           href: call-from-power-automate-power-apps.md
         - name: ワークフローの実行のコントロール
