commit translated contents

--- a/articles/cognitive-services/Translator/toc.yml
+++ b/articles/cognitive-services/Translator/toc.yml
@@ -1,6 +1,6 @@
 - name: Translator のドキュメント
   href: index.yml
-- name: '[変換者]'
+- name: '[Translator]'
   items:
     - name: Translator とは
       href: translator-info-overview.md
