--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -9,7 +9,8 @@
       "monikers": [],
       "moniker_ranges": [],
       "xref_query_tags": [
-        "/dotnet"
+        "/dotnet",
+        "/python"
       ],
       "open_to_public_contributors": true,
       "type_mapping": {
@@ -26,17 +27,18 @@
     }
   ],
   "notification_subscribers": [
-    "CnE_UE_Acom_doc_all@moravia.com"
+    "azure-docs-publish@microsoft.com"
   ],
-  "sync_notification_subscribers": [],
+  "sync_notification_subscribers": [
+    "ceicnotifications@microsoft.com"
+  ],
   "branches_to_filter": [
     "master",
     "master-sync-work",
     "live"
   ],
-  "git_repository_url_open_to_public_contributors": "https://github.com/MicrosoftDocs/azure-docs.ja-jp",
+ "git_repository_url_open_to_public_contributors": "https://github.com/MicrosoftDocs/azure-docs.ja-jp",
   "git_repository_branch_open_to_public_contributors": "master",
-  "continue_with_document_error": true,
   "skip_source_output_uploading": false,
   "need_preview_pull_request": true,
   "contribution_branch_mappings": {
@@ -67,27 +69,22 @@
       "path_to_root": "_repo.en-us",
       "url": "https://github.com/MicrosoftDocs/azure-docs-pr",
       "branch": "live",
-      "branch_mapping": {}
+      "branch_mapping": {
+      "live":"live",
+      "master":"master"
+      }
     },
     {
       "path_to_root": "cli_scripts",
       "url": "https://github.com/Azure/azure-docs-cli-python-samples",
       "branch": "master",
-      "branch_mapping": {
-        "release-build-mysql": "release-build",
-        "release-build-postgresql": "release-build",
-        "release-build-stellar": "release-build"
-      }
+      "branch_mapping": {}
     },
     {
       "path_to_root": "powershell_scripts",
       "url": "https://github.com/Azure/azure-docs-powershell-samples",
       "branch": "master",
-      "branch_mapping": {
-        "release-build-mysql": "release-build",
-        "release-build-postgresql": "release-build",
-        "release-build-stellar": "release-build"
-      }
+      "branch_mapping": {}
     },
     {
       "path_to_root": "policy-templates",
@@ -416,32 +413,32 @@
       "path_to_root": "spring-data-azure-cosmos-db-sql-tutorial",
       "url": "https://github.com/Azure-Samples/azure-spring-data-cosmos-java-sql-api-getting-started/",
       "branch": "main"
-    },
+    },    
     {
       "path_to_root": "azure-cosmos-spark",
       "url": "https://github.com/Azure/azure-cosmosdb-spark",
       "branch": "2.4"
-    },   
+    },     
     {
       "path_to_root": "cosmos-dotnet-getting-started",
       "url": "https://github.com/Azure-Samples/cosmos-dotnet-getting-started",
-      "branch": "master",
+      "branch": "main",
       "branch_mapping": {}
     },
     {
       "path_to_root": "cosmos-dotnet-v4-getting-started",
       "url": "https://github.com/Azure-Samples/cosmos-dotnet-v4-getting-started",
-      "branch": "master"
+      "branch": "main"
     },
     {
       "path_to_root": "cosmos-dotnet-bulk-import",
       "url": "https://github.com/Azure-Samples/cosmos-dotnet-bulk-import-throughput-optimizer",
-      "branch": "master"
+      "branch": "main"
     },
     {
       "path_to_root": "samples-cosmosdb-dotnet-web-app",
       "url": "https://github.com/Azure-Samples/cosmos-dotnet-todo-app",
-      "branch": "master"
+      "branch": "main"
     },
     {
       "path_to_root": "samples-cosmosdb-dotnet-v3",
@@ -456,22 +453,22 @@
     {
       "path_to_root": "samples-cosmosdb-java-v4-web-app",
       "url": "https://github.com/Azure-Samples/azure-cosmos-java-sql-api-todo-app",
-      "branch": "master"
+      "branch": "main"
     },
     {
       "path_to_root": "samples-cosmosdb-dotnet-change-feed-processor",
       "url": "https://github.com/Azure-Samples/cosmos-dotnet-change-feed-processor",
-      "branch": "master"
+      "branch": "main"
     },
     {
       "path_to_root": "samples-cosmosdb-dotnet-core-web-app",
       "url": "https://github.com/Azure-Samples/cosmos-dotnet-core-todo-app",
-      "branch": "master"
+      "branch": "main"
     },
     {
       "path_to_root": "samples-cosmosdb-xamarin",
       "url": "https://github.com/Azure-Samples/azure-cosmos-db-sql-xamarin-getting-started",
-      "branch": "master"
+      "branch": "main"
     },
     {
       "path_to_root": "cosmosdb-python-sdk",
@@ -481,17 +478,17 @@
     {
       "path_to_root": "cosmosdb-cassandra-python-sample",
       "url": "https://github.com/Azure-Samples/azure-cosmos-db-cassandra-python-getting-started",
-      "branch": "master"
+      "branch": "main"
     },
     {
       "path_to_root": "cosmosdb-nodejs-get-started",
       "url": "https://github.com/Azure-Samples/azure-cosmos-db-sql-api-nodejs-getting-started",
-      "branch": "master"
+      "branch": "main"
     },
     {
       "path_to_root": "azure-cosmos-db-python-getting-started",
       "url": "https://github.com/Azure-Samples/azure-cosmos-db-python-getting-started",
-      "branch": "master"
+      "branch": "main"
     },
     {
       "path_to_root": "cognitive-services-content-moderator-samples",
@@ -547,29 +544,29 @@
     {
       "path_to_root": "azure-cosmosdb-graph-dotnet",
       "url": "https://github.com/Azure-Samples/azure-cosmos-db-graph-gremlindotnet-getting-started",
-      "branch": "master"
+      "branch": "main"
     },
     {
       "path_to_root": "azure-cosmosdb-java-v4-getting-started",
       "url": "https://github.com/Azure-Samples/azure-cosmos-java-getting-started",
-      "branch": "master"
+      "branch": "main"
     },
     {
       "path_to_root": "azure-cosmosdb-dotnet-table",
       "url": "https://github.com/Azure-Samples/azure-cosmos-table-dotnet-core-getting-started",
-      "branch": "master"
+      "branch": "main"
     },
     {
       "path_to_root": "azure-cosmos-java-sql-api-samples",
       "url": "https://github.com/Azure-Samples/azure-cosmos-java-sql-api-samples",
-      "branch": "master"
-    },    
+      "branch": "main"
+    }, 
     {
       "path_to_root": "azure-cosmos-java-sql-app-example",
       "url": "https://github.com/Azure-Samples/azure-cosmos-java-sql-app-example",
-      "branch": "master"
-    },              
-    {  
+      "branch": "main"
+    },         
+    {
       "path_to_root": "azure-storage-snippets",
       "url": "https://github.com/azure-samples/AzureStorageSnippets",
       "branch": "master"
@@ -600,8 +597,6 @@
       "template_folder": "_themes.pdf"
     }
   },
-  "need_generate_pdf": false,
-  "need_generate_intellisense": false,
   "docs_build_engine": {
     "name": "docfx_v3"
   }
