commit translated contents

--- a/articles/azure-resource-manager/management/toc.yml
+++ b/articles/azure-resource-manager/management/toc.yml
@@ -180,6 +180,8 @@
       href: ./policy-reference.md
 - name: リソース
   items:
+    - name: Microsoft Learn でスキルを身に付ける
+      href: /learn/browse/?products=azure-resource-manager
     - name: Azure のロードマップ
       href: 'https://azure.microsoft.com/roadmap/?category=monitoring-management'
     - name: 料金計算ツール
