--- a/articles/azure-resource-manager/templates/index.yml
+++ b/articles/azure-resource-manager/templates/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: mumian
   ms.author: jgao
   ms.date: 11/06/2020
-  ms.openlocfilehash: ed7ab0ab016bdd3ff24a8d303bb29cd2a52741bf
-  ms.sourcegitcommit: 0b9fe9e23dfebf60faa9b451498951b970758103
+  ms.openlocfilehash: 72129eb10de042252c33784d7d98081f0f22a8b9
+  ms.sourcegitcommit: fa807e40d729bf066b9b81c76a0e8c5b1c03b536
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/07/2020
-  ms.locfileid: "94358662"
+  ms.lasthandoff: 12/11/2020
+  ms.locfileid: "97346624"
 landingContent:
 - title: ARM テンプレートについて
   linkLists:
@@ -55,20 +55,18 @@ landingContent:
     links:
     - text: 初心者向けチュートリアル
       url: template-tutorial-create-first-template.md
-    - text: デプロイ
-      url: deployment-tutorial-local-template.md
-    - text: テンプレート スペック
-      url: template-specs-create-linked.md
-    - text: 高度なテンプレート
-      url: template-tutorial-use-template-reference.md
-    - text: Deployment Manager
-      url: deployment-manager-tutorial.md
   - linkListType: learn
     links:
     - text: Resource Manager テンプレートを使用してデプロイする
       url: /learn/paths/deploy-manage-resource-manager-templates/
 - title: テンプレートの開発
   linkLists:
+  - linkListType: tutorial
+    links:
+    - text: 高度なテンプレート
+      url: template-tutorial-use-template-reference.md
+    - text: テンプレート スペック
+      url: template-specs-create-linked.md
   - linkListType: how-to-guide
     links:
     - text: 関数を使用する
@@ -89,6 +87,10 @@ landingContent:
       url: https://azure.microsoft.com/resources/templates/
 - title: テンプレートのデプロイ
   linkLists:
+  - linkListType: tutorial
+    links:
+    - text: デプロイ
+      url: deployment-tutorial-local-template.md
   - linkListType: how-to-guide
     links:
     - text: PowerShell
