--- a/articles/lighthouse/toc.yml
+++ b/articles/lighthouse/toc.yml
@@ -121,5 +121,7 @@
       href: 'https://azure.microsoft.com/roadmap/'
     - name: 料金計算ツール
       href: 'https://azure.microsoft.com/pricing/calculator/'
+    - name: リージョン別の提供状況
+      href: 'https://azure.microsoft.com/global-infrastructure/services/?products=azure-lighthouse&regions=all'
     - name: 製品フィードバック
       href: 'https://feedback.azure.com/forums/922753'
