--- a/articles/active-directory-b2c/index.yml
+++ b/articles/active-directory-b2c/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: msmimart
   ms.author: mimart
   ms.date: 01/28/2020
-  ms.openlocfilehash: 44bf636dff7203aa048bcbe3877c813fb9e63025
-  ms.sourcegitcommit: d22a86a1329be8fd1913ce4d1bfbd2a125b2bcae
+  ms.openlocfilehash: c59610b96367f467926d330b7615025e8a051377
+  ms.sourcegitcommit: 6172a6ae13d7062a0a5e00ff411fd363b5c38597
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/26/2020
-  ms.locfileid: "96170278"
+  ms.lasthandoff: 12/11/2020
+  ms.locfileid: "97108656"
 landingContent:
 - title: Azure AD B2C
   linkLists:
@@ -58,7 +58,7 @@ landingContent:
     - text: シングル サインオン (SSO) を有効にする
       url: session-overview.md
     - text: UI/UX をカスタマイズする
-      url: customize-ui-overview.md
+      url: customize-ui-with-html.md
     - text: ユーザーとアプリの移行
       url: user-migration.md
 - title: アプリケーションへのサインインを追加する
