--- a/articles/machine-learning/breadcrumb/toc.yml
+++ b/articles/machine-learning/breadcrumb/toc.yml
@@ -69,3 +69,10 @@
             - name: パイプライン
               tocHref: /azure/devops/pipelines/languages/
               topicHref: /azure/devops/pipelines/index
+- name: Azure
+  tocHref: /azure/
+  topicHref: /azure/index
+  items:
+    - name: Machine Learning
+      tocHref: /power-bi/connect-data/
+      topicHref: /azure/machine-learning/index
