--- a/articles/aks/TOC.yml
+++ b/articles/aks/TOC.yml
@@ -333,8 +333,10 @@
           href: spark-job.md
         - name: GPU の使用
           href: gpu-cluster.md
-        - name: Azure Database for PostgreSQL の使用
-          href: ../postgresql/concepts-aks.md
+        - name: PostgreSQL を使用したアプリのビルド
+          href: ../postgresql/flexible-server/tutorial-django-aks-database.md
+        - name: MySQL を使用したアプリのビルド
+          href: ../mysql/flexible-server/tutorial-deploy-wordpress-on-aks.md
           maintainContext: true
         - name: Azure API Management の使用
           href: ../api-management/api-management-kubernetes.md
