--- a/articles/cognitive-services/Computer-vision/toc.yml
+++ b/articles/cognitive-services/Computer-vision/toc.yml
@@ -41,17 +41,17 @@
       href: concept-generating-thumbnails.md
     - name: 成人向けコンテンツの検出
       href: concept-detecting-adult-content.md
-- name: 責任ある AI
+- name: AI の責任ある使用
   items:
     - name: 空間分析
       items:
-        - name: わかりやすさに関するメモ
+        - name: 透明性に関するメモ
           items:
             - name: 空間分析の概要
               href: /legal/cognitive-services/computer-vision/intro-to-spatial-analysis-public-preview?context=%2fazure%2fcognitive-services%2fComputer-vision%2fcontext%2fcontext
             - name: 特性と制限
               href: /legal/cognitive-services/computer-vision/accuracy-and-limitations?context=%2fazure%2fcognitive-services%2fComputer-vision%2fcontext%2fcontext
-        - name: 配置ガイドライン
+        - name: 統合と責任ある使用
           items:
             - name: AI デプロイでの責任ある使用
               href: /legal/cognitive-services/computer-vision/responsible-use-deployment?context=%2fazure%2fcognitive-services%2fComputer-vision%2fcontext%2fcontext
