--- a/articles/synapse-analytics/toc.yml
+++ b/articles/synapse-analytics/toc.yml
@@ -96,8 +96,6 @@
           href: ./cicd/continuous-integration-deployment.md
         - name: セキュリティ
           items:
-            - name: セキュリティ ベースライン
-              href: security-baseline.md
             - name: 暗号化
               href: ./security/workspaces-encryption.md
             - name: ネットワークのセキュリティ
@@ -566,7 +564,7 @@
           href: ./spark/apache-spark-delta-lake-overview.md
         - name: ライブラリを管理する
           href: ./spark/apache-spark-azure-portal-add-libraries.md
-        - name: Notebooks を使用する
+        - name: ノートブックと IDE ツールを使用する
           items:
             - name: Notebooks を管理する
               href: ./spark/apache-spark-development-using-notebooks.md
