--- a/articles/machine-learning/toc.yml
+++ b/articles/machine-learning/toc.yml
@@ -84,16 +84,33 @@
           href: tutorial-setup-vscode-extension.md
         - name: TensorFlow 画像分類モデルのトレーニングとデプロイ
           href: tutorial-train-deploy-image-classification-model-vscode.md
+    - name: Microsoft Power BI 統合
+      items:
+        - name: 'パート 1: モデルのトレーニングとデプロイ'
+          items:
+            - name: ノートブックの使用 (コード)
+              href: tutorial-power-bi-custom-model.md
+            - name: デザイナーの使用
+              href: tutorial-power-bi-designer-model.md
+            - name: 自動 ML の使用
+              href: tutorial-power-bi-automated-model.md
+        - name: 'パート 2: Power BI での使用'
+          href: /power-bi/connect-data/service-aml-integrate?context=azure/machine-learning/context/ml-context
 - name: サンプル
   items:
     - name: Jupyter Notebooks
       displayName: 'example, examples, server, jupyter, azure notebooks, python, notebook, github'
       href: samples-notebooks.md
+    - name: リポジトリの例
+      displayName: 'example, examples, jupyter, python, notebook, github'
+      href: 'https://github.com/Azure/azureml-examples'
     - name: デザイナーの例とデータセット
       displayName: 'example, examples, studio, pipelines, data sets, modules'
       href: samples-designer.md
+    - name: エンドツーエンドの MLOps の例
+      href: 'https://github.com/microsoft/MLOps'
     - name: Open Datasets (パブリック)
-      href: ../open-datasets/samples.md?context=%2fazure%2fmachine-learning%2fcontext%2fml-context
+      href: /azure/open-datasets/samples?context=azure/machine-learning/context/ml-context
 - name: 概念
   items:
     - name: コストの計画と管理
@@ -155,8 +172,6 @@
         - name: エンタープライズ セキュリティの概要
           displayName: authorization authentication encryption aad azure active directory
           href: concept-enterprise-security.md
-        - name: データの暗号化
-          href: concept-data-encryption.md
         - name: セキュリティ ベースライン
           href: security-baseline.md
     - name: 信頼できる ML
@@ -179,17 +194,14 @@
       items:
         - name: ID およびアクセス管理
           items:
-            - name: ワークスペースの認証
+            - name: 認証の設定
               displayName: 'authentication, auth, oauth'
               href: how-to-setup-authentication.md
-            - name: Web サービス認証
-              displayName: 'authentication, model, web service'
-              href: how-to-authenticate-web-service.md
-            - name: アクセスの管理 (認可)
+            - name: ユーザーとロールを管理する
               href: how-to-assign-roles.md
-            - name: アクセス制御用のマネージド ID
+            - name: アクセスの制御にマネージド ID を使用する
               href: how-to-use-managed-identities.md
-            - name: AKS デプロイでの Azure AD ID
+            - name: AKS デプロイで Azure AD ID を使用する
               href: how-to-use-azure-ad-identity.md
         - name: ネットワークのセキュリティ
           items:
@@ -399,9 +411,6 @@
         - name: リモート コンピューティング ターゲットを使用する
           displayName: automl automated auto ml
           href: how-to-auto-train-remote.md
-        - name: Databricks で自動 ML を使用する
-          displayName: automl
-          href: how-to-configure-databricks-automl-environment.md
         - name: 予測モデルを自動トレーニングする
           displayName: time series
           href: how-to-auto-train-forecast.md
@@ -448,15 +457,11 @@
               href: how-to-deploy-model-cognitive-search.md
             - name: カスタム Docker イメージを使用する
               href: how-to-deploy-custom-docker-image.md
-            - name: ローカル マシン
-              href: how-to-deploy-local.md
             - name: IoT Edge
-              href: ../iot-edge/tutorial-deploy-machine-learning.md?context=%2fazure%2fmachine-learning%2fservice%2fcontext%2fml-context
+              href: /azure/iot-edge/tutorial-deploy-machine-learning?context=azure/machine-learning/service/context/ml-context
             - name: FPGA 推論
               href: how-to-deploy-fpga-web-service.md
-        - name: トラブルシューティングとデバッグ (ローカル)
-          href: how-to-troubleshoot-deployment-local.md
-        - name: トラブルシューティングとデバッグ (リモート)
+        - name: トラブルシューティングとデバッグ
           href: how-to-troubleshoot-deployment.md
         - name: Web サービスを使用する
           displayName: create client consume request response synchronous
@@ -534,7 +539,7 @@
           href: how-to-debug-parallel-run-step.md
     - name: CI/CD 用の Azure Pipelines
       displayName: 'continuous, integration, delivery'
-      href: /azure/devops/pipelines/targets/azure-machine-learning?context=%2fazure/machine-learning/context/ml-context
+      href: /azure/devops/pipelines/targets/azure-machine-learning?context=azure/machine-learning/context/ml-context
     - name: CI/CD 用の GitHub Actions
       href: how-to-github-actions-machine-learning.md
     - name: リソース クォータを管理する
@@ -556,7 +561,7 @@
   items:
     - name: Python SDK
       displayName: 'api, core, package, python, class'
-      href: /python/api/overview/azure/ml/intro?view=azure-ml-py
+      href: 'https://docs.microsoft.com/python/api/overview/azure/ml/intro?view=azure-ml-py'
     - name: R SDK
       displayName: 'api, core, package, R, class'
       href: 'https://azure.github.io/azureml-sdk-for-r/reference/index.html'
@@ -564,7 +569,7 @@
       displayName: 'extension, command line, command-line, az, ci/cd, automate, automated'
       href: reference-azure-machine-learning-cli.md
     - name: REST API
-      href: /rest/api/azureml/
+      href: 'https://docs.microsoft.com/rest/api/azureml/'
     - name: デザイナー モジュール リファレンス
       displayName: 'module, reference, algorithm, studio'
       href: algorithm-module-reference/module-reference.md
@@ -595,11 +600,11 @@
       displayName: 'bugs, errors, troubleshoot'
       href: resource-known-issues.md
     - name: ユーザー フォーラム
-      href: /answers/topics/azure-machine-learning.html
+      href: 'https://docs.microsoft.com/answers/topics/azure-machine-learning.html'
     - name: Stack Overflow
       href: 'https://stackoverflow.com/questions/tagged/azure-machine-learning-service'
     - name: Microsoft の ML 製品の比較
-      href: /azure/architecture/data-guide/technology-choices/data-science-and-machine-learning?context=%2fazure/machine-learning/context/ml-context
+      href: /azure/architecture/data-guide/technology-choices/data-science-and-machine-learning?context=azure/machine-learning/context/ml-context
     - name: Workbench の変更点
       displayName: 'desktop, ui, Workbench, upgrade, update, transfer'
       href: overview-what-happened-to-workbench.md
