commit translated contents

--- a/articles/active-directory-b2c/index.yml
+++ b/articles/active-directory-b2c/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: msmimart
   ms.author: mimart
   ms.date: 01/28/2020
-  ms.openlocfilehash: c59610b96367f467926d330b7615025e8a051377
-  ms.sourcegitcommit: 6172a6ae13d7062a0a5e00ff411fd363b5c38597
+  ms.openlocfilehash: 1f7eac5adc9099f4c00b5a12528a74a50965675c
+  ms.sourcegitcommit: 63d0621404375d4ac64055f1df4177dfad3d6de6
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 12/11/2020
-  ms.locfileid: "97108656"
+  ms.lasthandoff: 12/15/2020
+  ms.locfileid: "97508001"
 landingContent:
 - title: Azure AD B2C
   linkLists:
@@ -56,7 +56,7 @@ landingContent:
     - text: ソーシャルおよび職場の ID を追加する:OIDC/OAuth2/SAML
       url: tutorial-add-identity-providers.md
     - text: シングル サインオン (SSO) を有効にする
-      url: session-overview.md
+      url: session-behavior.md
     - text: UI/UX をカスタマイズする
       url: customize-ui-with-html.md
     - text: ユーザーとアプリの移行
