--- a/articles/mariadb/index.yml
+++ b/articles/mariadb/index.yml
@@ -8,12 +8,12 @@ metadata:
   ms.date: 09/05/2019
   ms.service: mariadb
   ms.topic: landing-page
-  ms.openlocfilehash: 3c2ea25c4d928071da6f6d3047b58996289aaa13
-  ms.sourcegitcommit: 6ab718e1be2767db2605eeebe974ee9e2c07022b
+  ms.openlocfilehash: a94e88dc1f7dca73f20cfee3b8cbea8cfad011af
+  ms.sourcegitcommit: 66479d7e55449b78ee587df14babb6321f7d1757
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/12/2020
-  ms.locfileid: "94539806"
+  ms.lasthandoff: 12/15/2020
+  ms.locfileid: "97516558"
 landingContent:
 - title: Azure Database for MariaDB について
   linkLists:
@@ -114,8 +114,8 @@ landingContent:
   - linkListType: reference
     links:
     - text: Azure CLI の開発者用リファレンス
-      url: /rest/api/mariadb/
+      url: /cli/azure/mariadb/
     - text: REST API の開発者用リファレンス
-      url: /cli/azure/mariadb
+      url: /rest/api/mariadb/
     - text: Azure Resource Manager のテンプレート
       url: /azure/templates/microsoft.dbformariadb/allversions
