commit translated contents

--- a/articles/cognitive-services/Translator/index.yml
+++ b/articles/cognitive-services/Translator/index.yml
@@ -13,12 +13,13 @@ metadata:
   ms.topic: landing-page
   ms.date: 10/14/2019
   ms.author: erhopf
-  ms.openlocfilehash: 4fe9c22a126f1fca63ad689c8de27e822b838110
-  ms.sourcegitcommit: 22da82c32accf97a82919bf50b9901668dc55c97
+  ms.custom: contperf-fy21q2
+  ms.openlocfilehash: f0f2e009220292d298848cf93c479639b2318062
+  ms.sourcegitcommit: d2d1c90ec5218b93abb80b8f3ed49dcf4327f7f4
   ms.translationtype: HT
   ms.contentlocale: ja-JP
-  ms.lasthandoff: 11/08/2020
-  ms.locfileid: "94364668"
+  ms.lasthandoff: 12/16/2020
+  ms.locfileid: "97588490"
 landingContent:
 - title: Translator
   linkLists:
@@ -40,7 +41,7 @@ landingContent:
   linkLists:
   - linkListType: quickstart
     links:
-    - text: クイックスタート
+    - text: クイック スタート
       url: quickstart-translator.md
   - linkListType: tutorial
     links:
